# proto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/proto_datadriven/app/: build.gradle  proguard-rules.pro
android/proto_datadriven/app/src/androidTest/java/com/munchiecollision/protodatadriven/: ApplicationTest.java
android/proto_datadriven/app/src/main/: AndroidManifest.xml
android/proto_datadriven/app/src/main/java/com/munchiecollision/protodatadriven/: MainActivity.java
android/proto_datadriven/app/src/main/jni/: proto.cpp  proto.h
android/proto_datadriven/app/src/main/res/layout/: activity_main.xml  text_view_item.xml
android/proto_datadriven/app/src/main/res/values/: strings.xml
cmake/: git.cmake  system.cmake
demo/: CMakeLists.txt  main.cpp
demo/resources/: basic_shader.ps  basic_shader.vs
dispatch/: CMakeLists.txt  abstract.h  command_buffer.h  main.cpp  stopwatch.h
docs/: cool_links.txt
old_tests/dispatch/: CMakeLists.txt  command_buffer.h  main.cpp
old_tests/proto/: abstract.h  harness.h  imp_datadriven.h  math.matrixes.h  math.vectors.h
old_tests/terminal/: main.cpp
old_tests/tilling/: CMakeLists.txt  details.h  main.cpp  proto.debug.cpp  proto.id.h  proto.mesh.cpp  proto.mesh.h  proto.mesh_builder.cpp  proto.mesh_builder.h  proto.renderer.h  proto.window.h  proto.window_manager.h  proto.window_win32.cpp
proto/: CMakeLists.txt  harness.h  imp_datadriven.h  imp_reference.h  test_math.h
proto/cmake/: environment.cmake  modules.cmake
proto/include/: proto.debug.h  proto.debug_break.h  proto.debug_print.h  proto.debug_thread.h  proto.details.expected.h  proto.details.h  proto.dispatcher.h  proto.event.h  proto.event_scheduler.h  proto.formats.h  proto.framebuffer.h  proto.gl.h  proto.h  proto.id.h  proto.math.details.h  proto.math.h  proto.mesh.h  proto.mesh_builder.h  proto.program.h  proto.run_scheduler.h  proto.scheduler.h  proto.shader.h  proto.singleton.h  proto.stopwatch.h  proto.texture.h  proto.window.h  proto.window_manager.h
proto/modules/demo/src/: main.cpp
proto/modules/proto/: CMakeLists.txt
proto/modules/proto/include/: proto.application.h  proto.color.h  proto.debug.h  proto.debug_break.h  proto.debug_thread.h  proto.details.dispatch.h  proto.details.expected.h  proto.details.h  proto.details.mask.h  proto.details.thread.h  proto.dispatcher.h  proto.event.h  proto.event_scheduler.h  proto.h  proto.id.h  proto.run_scheduler.h  proto.scheduler.h  proto.service.h  proto.singleton_base.h  proto.stopwatch.h  proto.swap_locking.h  proto.sync_scheduler.h
proto/modules/proto/src/: proto.application.cpp  proto.details.dispatcher.cpp  proto.event_scheduler.cpp  proto.run_scheduler.cpp  proto.scheduler.cpp  proto.service.cpp  proto.sync_scheduler.cpp
proto/modules/proto_gl/: CMakeLists.txt
proto/modules/proto_gl/include/: proto.gl.application.h  proto.gl.application_win32.h  proto.gl.debug.h  proto.gl.deps.h  proto.gl.details.h  proto.gl.formats.h  proto.gl.framebuffer.h  proto.gl.h  proto.gl.mesh.h  proto.gl.mesh_builder.h  proto.gl.program.h  proto.gl.renderer.h  proto.gl.shader.h  proto.gl.texture.h  proto.gl.window.h  proto.gl.window_events.h  proto.gl.window_manager.h  proto.gl.window_win32.h
proto/modules/proto_gl/src/: proto.gl.application.cpp  proto.gl.application_win32.cpp  proto.gl.debug.cpp  proto.gl.framebuffer.cpp  proto.gl.mesh.cpp  proto.gl.mesh_builder.cpp  proto.gl.program.cpp  proto.gl.renderer.cpp  proto.gl.shader.cpp  proto.gl.texture.cpp  proto.gl.window.cpp  proto.gl.window_manager.cpp  proto.gl.window_win32.cpp
proto/modules/proto_tui/include/: proto.tui.h
proto/modules/proto_tui/src/: proto.tui.cpp
proto/src/: proto.debug.cpp  proto.event_scheduler.cpp  proto.framebuffer.cpp  proto.mesh.cpp  proto.mesh_builder.cpp  proto.program.cpp  proto.renderer.cpp  proto.run_scheduler.cpp  proto.scheduler.cpp  proto.texture.cpp  proto.window.cpp  proto.window_manager.cpp  proto.window_manager_osx.mm  proto.window_osx.mm  proto.window_win32.cpp
proto_gl/: CMakeLists.txt
proto_gl/include/: proto.gl.constants.h  proto.gl.deps.h  proto.gl.formats.h  proto.gl.h  proto.gl.mesh.h  proto.gl.mesh_builder.h  proto.gl.program.h  proto.gl.renderer.h  proto.gl.shader.h  proto.gl.texture.h  proto.gl.window.h
proto_gl/src/: proto.gl.debug.cpp  proto.gl.framebuffer.cpp  proto.gl.mesh.cpp  proto.gl.mesh_builder.cpp  proto.gl.program.cpp  proto.gl.window.cpp  proto.gl.window_manager.cpp  proto.gl.window_manager_win.cpp  proto.gl.window_win.cpp  proto.gl.window_win_native.cpp
src/: CMakeLists.txt  abstract.h  harness.h  harness_timer.h  imp_datadriven.h  imp_reference.h  main.cpp  math.matrixes.h  math.vectors.h  test_math.h
terminal/: CMakeLists.txt
tilling/: CMakeLists.txt  main.cpp  proto.details.h  proto.framebuffer.cpp  proto.framebuffer.h  proto.id.h  proto.math.details.h  proto.math.h  proto.math.matrixes.h  proto.math.vectors.h  proto.mesh.cpp  proto.mesh.h  proto.mesh_builder.cpp  proto.program.cpp  proto.program.h  proto.render_target.h  proto.renderer.cpp  proto.renderer.h  proto.shader.cpp  proto.shader.h  proto.stopwatch.h  proto.texture.cpp  proto.texture.h  proto.window.h  proto.window_manager.h  proto.window_manager_osx.mm  proto.window_manager_win32.cpp  proto.window_osx.mm  proto.window_osx_native.h  proto.window_osx_native.mm  proto.window_win32.cpp  render_target.h  renderer.cpp  renderer.h  stopwatch.h  vmath.h  vmath.matrixes.h  vmath.vectors.h
